change name of organisation

--- a/ap-or-voc-config.json
+++ b/ap-or-voc-config.json
@@ -1,7 +1,7 @@
 {
     "naam": "",
     "rapport" : "",
-    "verantwoordelijke_organisatie": "Agentschap Informatie Vlaanderen",
+    "verantwoordelijke_organisatie": "Agentschap Digitaal Vlaanderen",
     "identificator_organisatie": "https://data.vlaanderen.be/doc/organisatie/OVO002949",
     "publicatiedatum": "",
     "type_toepassing": "",
