Update README.md + config file

--- a/ap-or-voc-config.json
+++ b/ap-or-voc-config.json
@@ -1,6 +1,6 @@
 {
   "title": "",
-  "type": "",
+  "category": "",
   "usage": "",
   "responsibleOrganisation": {
     "name": "Agentschap Digitaal Vlaanderen",
