--- a/.github/workflows/configuration_validator.yml
+++ b/.github/workflows/configuration_validator.yml
@@ -3,8 +3,32 @@ name: Validate JSONs
 on: [push]
 
 jobs:
+  fetch-configuration-files:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        # Different Node versions. Each node version will trigger the action
+        node-version:
+          - 18.x
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+        with:
+          repository: ${{ github.repository }}
+          ref: config
+          path: Informatievlaanderen/OSLOthema-template
+
+      - name: Copy schema and configuration file
+        shell: bash
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          ls -al
+          ls -al
   verify-json-validation:
     # Wait for previous job to make sure the schemas folder and configuration schema are created before running this job
+    needs: fetch-configuration-files
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
