--- a/.github/workflows/configuration_validator.yml
+++ b/.github/workflows/configuration_validator.yml
@@ -24,22 +24,24 @@ jobs:
           ref: standaardenregister # replace with your target branch name
           path: target
 
-      - name: Copy files
+      - name: Copy schema file into target branch
         run: |
-          ls ./source
-          ls ./target
-  # verify-json-validation:
-  #   # Wait for previous job to make sure the schemas folder and configuration schema are created before running this job
-  #   needs: copy-configuration-files
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #       with:
-  #         # needed to fetch changes from other jobs, otherwise working on initial repo state
-  #         ref: ${{ github.ref }}
-  #         fetch-depth: 0
-  #     - name: Validate JSON
-  #       uses: docker://orrosenblatt/validate-json-action:latest
-  #       env:
-  #         INPUT_SCHEMA: https://raw.githubusercontent.com/Informatievlaanderen/OSLOthema-template/config/schemas/configuration.json
-  #         INPUT_JSONS: https://raw.githubusercontent.com/Informatievlaanderen/OSLOthema-airAndWater/master/config/OSLO-AirAndWater-Water-AP.json
+          cp -r source/schemas/* target/schemas/*
+  verify-json-validation:
+    # Wait for previous job to make sure the schemas folder and configuration schema are created before running this job
+    needs: copy-configuration-files
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          # needed to fetch changes from other jobs, otherwise working on initial repo state
+          ref: ${{ github.ref }}
+          fetch-depth: 0
+      - name: list folder structure
+        run: |
+          ls -a
+      - name: Validate JSON
+        uses: docker://orrosenblatt/validate-json-action:latest
+        env:
+          INPUT_SCHEMA: schemas/configuration.json
+          INPUT_JSONS: "**.json"
