--- a/.github/workflows/configuration_validator.yml
+++ b/.github/workflows/configuration_validator.yml
@@ -27,8 +27,7 @@ jobs:
       - name: Copy schema file into target branch
         shell: bash
         run: |
-          mkdir -p target/schemas
-          cp -r source/schemas/* target/schemas/*
+          mkdir -p target/schemas && cp -r source/schemas/* target/schemas/*
       - name: List file structure of target dir
         shell: bash
         run: |
