--- a/.github/workflows/configuration_validator.yml
+++ b/.github/workflows/configuration_validator.yml
@@ -29,11 +29,11 @@ jobs:
       - name: Copy schema file into target branch
         shell: bash
         run: |
-          ls /source
+          ls source
       - name: List file structure of target dir
         shell: bash
         run: |
-          ls /target
+          ls target
       - name: list folder structure
         shell: bash
         run: |
