--- a/.github/workflows/configuration_validator.yml
+++ b/.github/workflows/configuration_validator.yml
@@ -37,5 +37,5 @@ jobs:
       - name: Validate JSON
         uses: walbo/validate-json@v1.1.0
         with:
-          files: target/*.json
+          files: target/ap-or-voc-config.json
           schema: source/schemas/configuration.json
