Added strict false flag to see if it impacts flow

--- a/.github/workflows/configuration_validator.yml
+++ b/.github/workflows/configuration_validator.yml
@@ -39,3 +39,4 @@ jobs:
         with:
           schema: source/schemas/configuration.json
           files: target/ap-or-voc-config.json
+          strict: false
