Added wildcard inside files prop

--- a/.github/workflows/configuration_validator.yml
+++ b/.github/workflows/configuration_validator.yml
@@ -39,5 +39,5 @@ jobs:
         with:
           json_schema: source/schemas/configuration.json
           json_extension: json
-          files: target/ap-or-voc-config.json
+          files: target/*.json
           use_gitignore: false
