--- a/.github/workflows/configuration_validator.yml
+++ b/.github/workflows/configuration_validator.yml
@@ -17,12 +17,14 @@ jobs:
         with:
           repository: Informatievlaanderen/OSLOthema-template
           ref: config
+          # The source folder contains the configuration files, as defined in the thema-template-repository
           path: source
       - name: Checkout target branch
         uses: actions/checkout@v4
         with:
           repository: ${{ github.repository }}
           ref: standaardenregister
+          # Target is the folder containing the content of thema-repository
           path: target
       # Extra step to debug the file structure
       - name: List file structure of source dir
