--- a/.github/workflows/configuration_validator.yml
+++ b/.github/workflows/configuration_validator.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Checkout target branch
         uses: actions/checkout@v4
         with:
+          # Dynamic reference to the active repository so that it works immediately when creating a new thema repo
           repository: ${{ github.repository }}
           ref: standaardenregister
           # Target is the folder containing the content of thema-repository
