--- a/.github/workflows/configuration_validator.yml
+++ b/.github/workflows/configuration_validator.yml
@@ -44,5 +44,6 @@ jobs:
         with:
           json_schema: source/schemas/configuration.json
           json_extension: json
-          base_dir: target
+          # base_dir: target
+          files: "target/*.json"
           use_gitignore: false
