--- a/.github/workflows/configuration_validator.yml
+++ b/.github/workflows/configuration_validator.yml
@@ -44,6 +44,6 @@ jobs:
         with:
           json_schema: source/schemas/configuration.json
           json_extension: json
-          # base_dir: target
-          files: "target/*.json"
+          base_dir: target
+          comment: true
           use_gitignore: false
