--- a/schemas/configuration.json
+++ b/schemas/configuration.json
@@ -1,5 +1,6 @@
 {
   "$schema": "http://json-schema.org/draft-07/schema#",
+  "$ref": "#/definitions/Configuration",
   "definitions": {
     "Configuration": {
       "type": "object",
@@ -38,28 +39,73 @@
         "specificationDocuments": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/Document"
+            "type": "object",
+            "properties": {
+              "name": {
+                "type": "string"
+              },
+              "resourceReference": {
+                "type": "string"
+              }
+            },
+            "additionalProperties": false
           }
         },
         "documentation": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/Document"
+            "type": "object",
+            "properties": {
+              "name": {
+                "type": "string"
+              },
+              "resourceReference": {
+                "type": "string"
+              }
+            },
+            "additionalProperties": false
           }
         },
         "charter": {
-          "$ref": "#/definitions/Document"
+          "type": "object",
+          "properties": {
+            "name": {
+              "type": "string"
+            },
+            "resourceReference": {
+              "type": "string"
+            }
+          },
+          "additionalProperties": false
         },
         "reports": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/Document"
+            "type": "object",
+            "properties": {
+              "name": {
+                "type": "string"
+              },
+              "resourceReference": {
+                "type": "string"
+              }
+            },
+            "additionalProperties": false
           }
         },
         "presentations": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/Document"
+            "type": "object",
+            "properties": {
+              "name": {
+                "type": "string"
+              },
+              "resourceReference": {
+                "type": "string"
+              }
+            },
+            "additionalProperties": false
           }
         },
         "dateOfRegistration": {
@@ -69,9 +115,6 @@
           "type": "string"
         },
         "dateOfAcknowledgementBySteeringCommittee": {
-          "type": "string"
-        },
-        "fileName": {
           "type": "string"
         }
       },
@@ -91,18 +134,6 @@
         "dateOfAcknowledgementByWorkingGroup",
         "dateOfAcknowledgementBySteeringCommittee"
       ],
-      "additionalProperties": false
-    },
-    "Document": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string"
-        },
-        "resourceReference": {
-          "type": "string"
-        }
-      },
       "additionalProperties": false
     }
   }
