Try with correct keys and partial charter data

--- a/ap-or-voc-config.json
+++ b/ap-or-voc-config.json
@@ -10,10 +10,12 @@
   "descriptionFileName": "",
   "specificationDocuments": [],
   "documentation": [],
-  "charter": {},
+  "charter": {
+    "name": "Hello world"
+  },
   "reports": [],
   "presentations": [],
   "dateOfRegistration": "",
   "dateOfAcknowledgementByWorkingGroup": "",
-  "dateOfAcknowledgementBySteeringCommitte": ""
+  "dateOfAcknowledgementBySteeringCommittee": ""
 }
