Add correct config again without all errors in it

--- a/ap-or-voc-config.json
+++ b/ap-or-voc-config.json
@@ -10,9 +10,7 @@
   "descriptionFileName": "",
   "specificationDocuments": [],
   "documentation": [],
-  "charter": {
-    "name": "Hello world"
-  },
+  "charter": {},
   "reports": [],
   "presentations": [],
   "dateOfRegistration": "",
