--- a/.github/workflows/diff_validator.yml
+++ b/.github/workflows/diff_validator.yml
@@ -27,4 +27,4 @@ jobs:
 
       - name: Create diff
         run: |
-          git diff source target > diff.txt
+          diff -ru source target > diff.txt
