check to see if it's due to write access inside shell

--- a/.github/workflows/diff_generator.yml
+++ b/.github/workflows/diff_generator.yml
@@ -41,4 +41,4 @@ jobs:
 
       - name: Create diff
         run: |
-          git diff --no-index source target > ./diff.txt
+          git diff --no-index source target
