Add `--name-only` flag to see only the names of the changed files

--- a/.github/workflows/diff_generator.yml
+++ b/.github/workflows/diff_generator.yml
@@ -35,5 +35,6 @@ jobs:
         run: |
           ls target
       - name: Create diff
+        shell: bash
         run: |
-          git diff --no-index source target
+          git diff --no-index  --name-only source target
