--- a/.github/workflows/diff_generator.yml
+++ b/.github/workflows/diff_generator.yml
@@ -21,7 +21,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           # Dynamic reference to the active repository so that it works immediately when creating a new thema repo
-          repository: ${{ github.repository }}
+          # repository: ${{ github.repository }}
+          repository: Informatievlaanderen/OSLOthema-voorwaarden-dienstverlening
           ref: standaardenregister
           path:
             target
