Remove array elements from default config

--- a/ap-or-voc-config.json
+++ b/ap-or-voc-config.json
@@ -11,16 +11,7 @@
   "specificationDocuments": [],
   "documentation": [],
   "charter": {},
-  "reports": [
-    {
-      "name": "Agentschap Digitaal Vlaanderen",
-      "resourceReference": "https://data.vlaanderen.be/id/organisatie/OVO002949"
-    },
-    {
-      "name": "Agentschap Digitaal Vlaanderen",
-      "resourceReference": "https://data.vlaanderen.be/id/organisatie/OVO002949"
-    }
-  ],
+  "reports": [],
   "presentations": [],
   "dateOfRegistration": "",
   "dateOfAcknowledgementByWorkingGroup": "",
