--- a/.github/workflows/diff_generator.yml
+++ b/.github/workflows/diff_generator.yml
@@ -39,7 +39,8 @@ jobs:
         shell: bash
         run: |
           # fallback needed because diff returns 1 when there are differences which causes the workflow to fail
-          git diff --no-index --name-only source target > source/diff.txt || true
+          git diff --no-index --name-only source target || true
+          # git diff --no-index --name-only source target > source/diff.txt || true
       - name: Commit and push diff
         run: |
           cd source
