--- a/.github/workflows/diff_generator.yml
+++ b/.github/workflows/diff_generator.yml
@@ -38,7 +38,6 @@ jobs:
       - name: Create diff
         shell: bash
         run: |
-          # fallback needed because diff returns 1 when there are differences which causes the workflow to fail
           identical_files=""
           different_files=""
           for file in $(find source -type f | grep -v ".git"); do
@@ -52,8 +51,8 @@ jobs:
               fi
             fi
           done
-          echo -e "$identical_files" > identical_files.txt
-          echo -e "$different_files" > different_files.txt
+          echo -e "$identical_files"
+          echo -e "$different_files"
       # - name: Commit and push diff
       #   run: |
       #     cd source
