readd `-e` flag to GA

--- a/.github/workflows/diff_generator.yml
+++ b/.github/workflows/diff_generator.yml
@@ -52,10 +52,10 @@ jobs:
             fi
           done
           echo "Identical files:"
-          echo "$identical_files"
+          echo -e "$identical_files"
           echo "---------------------------------------------------"
           echo "Different files:"
-          echo "$different_files"
+          echo -e "$different_files"
       # - name: Commit and push diff
       #   run: |
       #     cd source
