--- a/.github/workflows/diff_generator.yml
+++ b/.github/workflows/diff_generator.yml
@@ -35,6 +35,7 @@ jobs:
         run: |
           ls target
       - name: See which files are unchanged between template and repository
+        id: generate-diff
         shell: bash
         # add a rule to ignore .git folder
         run: |
@@ -50,3 +51,5 @@ jobs:
           done
           echo "Identical files:"
           echo -e "$identical_files"
+    outputs:
+      identical_files: ${{ steps.generate-diff.outputs.identical_files }}
