Small formatting tweaks to GA summary

--- a/.github/workflows/diff_generator.yml
+++ b/.github/workflows/diff_generator.yml
@@ -51,5 +51,6 @@ jobs:
           done
           echo "Identical files:"
           echo -e "$identical_files"
-          echo "Overview of the identical files, compared to the template" >> $GITHUB_STEP_SUMMARY
+          echo "# Overview of the identical files, compared to the template" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY # this is a blank line
           echo -e "$identical_files" >> $GITHUB_STEP_SUMMARY
