--- a/.github/workflows/configuration_validator.yml
+++ b/.github/workflows/configuration_validator.yml
@@ -40,22 +40,13 @@ jobs:
       - name: Validate JSON
         id: validate
         # https://github.com/marketplace/actions/json-yaml-validate
-        uses: GrantBirki/json-yaml-validate@v2.4.0
+        uses: GrantBirki/json-yaml-validate@v2.5.0
         with:
           json_schema: source/schemas/configuration.json
           json_extension: json
           base_dir: target
           comment: true
           use_gitignore: false
-        continue-on-error: true
       - name: Save validation logs
-        if: always()
         run: |
-            mkdir logs
-            docker cp $(docker ps -alq):/app/logs ./logs
-  
-      - name: Upload logs as artifact
-        uses: actions/upload-artifact@v2
-        with:
-            name: validation-logs
-            path: ./logs
+          echo "Validation result: ${{ steps.validate.outputs.success }}"
